--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-  
-    <div class="center-content">
-        <h1></h1>
-        <p>Anna päivämäärä, lämpötila ja päivän ennustettu sademäärä</p>
+    <div>
+        <h3 class="header center-content">LATI</h3>
         <form action="/predict" method="post">
             <label for="date">Date:</label>
             <input type="date" name="date" id="date">
@@ -23,8 +21,48 @@
             <input type="submit" value="Ennusta">
         </form>
     </div>
-    
+   
+    <div class="center-content">
+        <div style="width: 800px;"><canvas id="myChart"></canvas></div>
+    </div>
 
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+    </script>
+    <script>
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            datasets: [{
+                label: 'Kävijöiden määrä',
+                data: {{ predictions | tojson | safe }},  // Modify this line
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                ],
+                borderWidth: 1,
+                pointRadius: 5,
+                pointBackgroundColor: 'rgba(255, 99, 132, 1)'
+            }]
+        },
+        options: {
+            scales: {
+                xAxes: [{
+                    type: 'linear',
+                    position: 'bottom'
+                }],
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+</script>
     <script src="../static/index.js"></script>
 </body>
 </html>
