--- a/templates/predict.html
+++ b/templates/predict.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-    <div>
+    <div class="center-content">
     <h1>Hey</h1> 
     <h2>Lautan ennustettu käyttäjien määrä</h2>
-        <h2>{{ prediction}} </h2>
+        <h2>{{ prediction }} </h2>
     </div>
     <button onclick="location.href='/'">Takaisin</button>
+
+    <div style="width: 800px;"><canvas id="myChart"></canvas></div>
+
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+    </script>
+    <script>
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: ['1', '2', '3', '4', '5', '6'],
+            datasets: [{
+                label: 'Kävijöiden määrä',
+                data: [{{ prediction}}],  // Use the prediction data here
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+</script>
 </body>
 </html>
