--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="center-content d-flex justify-content-center align-items-center pt-4">
-            <a href="https://github.com" style="text-decoration: none; color: black"><img src="../static/github.png" alt="github logo" width="30" height="30"> Lähdekoodi</a>
+            <a href="https://github.com/janneheldan/LATI-P" style="text-decoration: none; color: black"><img src="../static/github.png" alt="github logo" width="30" height="30"> Lähdekoodi</a>
         </div>
     </div>
     <script
